--- a/app/views/users/upload.html.erb
+++ b/app/views/users/upload.html.erb
@@ -5,25 +5,11 @@
     Need to configure email and initial password
     Need to add page for users to edit acount settings (password)
     Need to make this page accessible by only admins -->
-<h2>Add Member Manually</h2>
-<%= form_for :user, url: '/users' do |f| %>
 
-  First Name: <%= f.text_field :first_name %>
-  Last Name: <%= f.text_field :last_name %>
-  Email: <%= f.text_field :email %>
-  Permissions: <%= f.text_field :permissions %>
-  Password: <%= f.password_field :password %>
-  Password Confirmation: <%= f.password_field :password_confirmation %>
-  <%= f.submit "Submit" %>
 
-<% end %>
+<%= render "add_manual_form" %>
 
-<h2>Import Users from CSV</h2>
-
-<%= form_tag csv_upload_path, multipart: true do %>
-  <%= file_field_tag :file %>
-  <%= submit_tag "Import" %>
-<% end %>
+<%= render "add_csv_form" %>
 
 <br><br>
 <h5>You added <%= @users_uploaded.size %> new Users. Confirm below </h5>
@@ -47,9 +33,7 @@
   </table>
 
 <%= form_tag confirm_users_path  do %>
-  <% @users_uploaded.each do |user| %>
-    <%= hidden_field_tag "confirmed_ids[]", user.id, :multiple => true %>
-  <% end %>
+  <%= render "add_hidden_ids" %>
   <%= submit_tag "Confirm Users" %>
 <% end %>
 
