--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,11 +1,12 @@
 <!-- app/views/users/new.html.erb -->
-
-<h1>Create Members</h1>
-<!--Need to add CSV gem to add users
-    Need to configure email and initial password
-    Need to add page for users to edit acount settings (password)
-    Need to make this page accessible by only admins -->
-
-<%= render "add_manual_form" %>
-
-<%= render "add_csv_form" %>
+<div style="margin-left:45px">
+    <h1>Create Members</h1>
+    <!--Need to add CSV gem to add users
+        Need to configure email and initial password
+        Need to add page for users to edit acount settings (password)
+        Need to make this page accessible by only admins -->
+    
+    <%= render "add_manual_form" %>
+    
+    <%= render "add_csv_form" %>
+</div>
