cucumber passes for policy

--- a/app/views/policies/show.html.haml
+++ b/app/views/policies/show.html.haml
@@ -4,19 +4,19 @@
 
 %%ul
     %li
-        Semester start:
+        Semester Start Date:
         = @policy.first_day
     %li
-        Semester end:
+        Semester End Date:
         = @policy.last_day
     %li
         Fining Days:
         = @policy.fine_days
     %li
-        Fine rate:  
+        Fining Rate:  
         = @policy.fine_amount
     %li
-        Selling date limit:
+        Selling Date Limit:
         = @policy.market_sell_by
 
 
