--- a/app/views/policies/edit.html.haml
+++ b/app/views/policies/edit.html.haml
@@ -2,19 +2,19 @@
 
 = form_tag policy_path, :method => :put do
 
-    = label :policy, :first_day, 'Semester start'
+    = label :policy, :first_day, 'Semester Start Date'
     = date_select :policy, :first_day
     
-    = label :policy, :last_day, 'Semester end'
+    = label :policy, :last_day, 'Semester End Date'
     = date_select :policy, :last_day
     
     = label :policy, :fine_days, 'Fining Days'
     = date_select :policy, :fine_days
     
-    = label :policy, :fine_amount, 'Fine rate'
+    = label :policy, :fine_amount, 'Fining Rate'
     = text_field :policy, :fine_amount
     
-    = label :policy, :market_sell_by, 'Selling date limit'
+    = label :policy, :market_sell_by, 'Selling Date Limit'
     = text_field :policy, :market_sell_by
     
     = submit_tag 'Save Changes'
