--- a/app/views/users/upload.html.erb
+++ b/app/views/users/upload.html.erb
@@ -1,42 +1,59 @@
 <!-- app/views/users/new.html.erb -->
+  <div class="row">
+    <div class="col-lg-8">
+      <h2>Add User Manually!</h2>
+      <div class="hline"></div>
 
-<div style="margin-left:45px">
-  <h1>Create Members</h1>
-  <!--Need to add CSV gem to add users
-      Need to configure email and initial password
-      Need to add page for users to edit acount settings (password)
-      Need to make this page accessible by only admins -->
+      <%=render "add_manual_form" %>
 
+    </div>
+    <! --/col-lg-8 -->
+
+    <div class="col-lg-4">
+      <h2>Upload CSV</h2>
+      <div class="hline"></div>
+
+      <%=render "add_csv_form" %>
+
+    </div>
+  </div>
+  <! --/row -->
   
-  <%= render "add_manual_form" %>
-  
-  <%= render "add_csv_form" %>
-  
-  <br><br>
-  <h5>You added <%= @users_uploaded.size %> new Users. Confirm below </h5>
+  <! --New row -->
+  <div class="row" style= "padding-top:15px">
+
+  <div class="hline"></div>
+
+  <h3>You added <%= @users_uploaded.size %> new Users. Confirm below </h3>
   <br>
-    <table id="Users_uploaded" style="width:40%" >
+  <table id="Users_uploaded" class="table table-striped table-hover">
+    <tr>
+      <th>Name &nbsp; &nbsp; &nbsp;</th>
+      <th>Email</th>
+      <th>Password</th>
+    </tr>
+
+    <% @users_uploaded.each do |user| %>
       <tr>
-        <th>Name &nbsp; &nbsp; &nbsp;</th>
-        <th>Email</th>
-        <th>Password</th>
+        <td>
+          <%=user.first_name %>
+            <%=user.last_name%>
+        </td>
+        <td>
+          <%=user.email %>
+        </td>
+        <td>
+          <%=user.password %>
+        </td>
       </tr>
-    
-      <% @users_uploaded.each do |user| %>
-      <tr>
-        <td><%= user.first_name %> <%= user.last_name%></td>
-        <td><%= user.email %></td>
-        <td><%= user.password %></td>
-      </tr>
-      <% end %>
-    
-    </table>
-  
-  <%= form_tag confirm_users_path  do %>
-    <%= render "add_hidden_ids" %>
-    <br>
-    <%= submit_tag "Confirm Users" %>
+    <% end %>
+
+  </table>
+
+  <%=form_tag confirm_users_path do %>
+    <%=render "add_hidden_ids" %>
+      <br>
+  <button type="submit" class="btn btn-theme">Confirm Users</button>
   <% end %>
-  
-  <br>
-</div>
+  </div>
+
