All cucumber tests passing

--- a/app/views/users/_add_csv_form.html.erb
+++ b/app/views/users/_add_csv_form.html.erb
@@ -11,5 +11,5 @@
   <br>
   <br>
   <%= render "add_hidden_ids" %>
-  <button type="submit" class="btn btn-theme">Upload</button>
+  <button type="submit" class="btn btn-theme">Import</button>
 <% end %>
