move create users

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <!-- app/views/users/new.html.erb -->
 <div class="row">
 <div class="col-lg-8">
-  <h2>Add User Manually!</h2>
+  <h2>Add User Manually</h2>
   <div class="hline"></div>
 
   <%=render "add_manual_form" %>
