--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,13 +27,11 @@
           <li><a href="/">Home</a></li>
             <% if current_user %>
               <li> <%= link_to 'Policies', policy_path %> </li>
-              <li>
-                 <%= link_to 'Signup', '/signup' %>
-              </li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.full_name %> <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><%= link_to "Profile", '#' %></li>
+                  <li> <%= link_to 'Create Users', '/signup' %> </li>
                   <li><%= link_to "Sign Out", '/logout' %></li>
                 </ul>
               </li>
