--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,8 +36,17 @@
                 </ul>
               </li>
             <% else %>
-              <li>
-                <%= link_to 'LOGIN', '/login' %>
+              <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
+          			<div id="login-dp" class="dropdown-menu">
+          				<!--<li>-->
+          				<!--	 <div class="row">-->
+          				<!--			<div class="col-md-12">-->
+          								 <%= render "sessions/login_form" %>
+          				<!--			</div>-->
+          				<!--	 </div>-->
+          				<!--</li>-->
+          			</div>
               </li>
             <% end %>
           </li>
