--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.full_name %> <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><%= link_to "Profile", '#' %></li>
+                  <li><%= link_to "Profile", user_profile_path(current_user.id) %></li>
                   <li> <%= link_to 'Create Users', '/signup' %> </li>
                   <li><%= link_to "Sign Out", '/logout' %></li>
                 </ul>
