vertically stacked links

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,14 +10,14 @@
  <p><b>Permanent Shift Assignment:</b> <%=  %> </p>
  <p><b>Signoff History:</b> <%=  %> </p>
 
-<%= link_to 'Edit Profile', edit_profile_path %>
+<br> <%= link_to 'Edit Profile', edit_profile_path %> </br>
 
 <%### ADMIN ONLY ###%>
 <% if @current_user.is_ws_manager %>
-    <%= link_to 'Create Users', '/signup' %>
-    <%= link_to 'Create Workshifts', '/' %>
-    <%= link_to 'Assign Workshifts', '/'%>
-    <%= link_to 'View Weekly History', '/'%>
+    <br> <%= link_to 'Create Users', '/signup' %> </br>
+    <br> <%= link_to 'Create Workshifts', '/' %> </br>
+    <br> <%= link_to 'Assign Workshifts', '/'%> </br>
+    <br> <%= link_to 'View Weekly History', '/'%> </br>
 <% end %>
 
 
