--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
       <div class="navbar-collapse collapse navbar-right">
         <ul class="nav navbar-nav">
           <li><a href="/">Home</a></li>
+          <li><a href="/shifts"> Shifts </a></li>
             <% if current_user %>
               <li> <%= link_to 'Policies', policy_path %> </li>
               <li class="dropdown">
