--- a/app/views/shifts/index.html.haml
+++ b/app/views/shifts/index.html.haml
@@ -1,25 +1,8 @@
 %h1 Listing shifts
 
-%table
-  %thead
-    %tr
-      %th Start time
-      %th End time
-      %th Metashift
-      %th
-      %th
-      %th
+= react_component 'WorkShiftTable', {:shifts => @serializedShifts}, :div
 
-  %tbody
-    - @shifts.each do |shift|
-      %tr
-        %td= shift.start_time
-        %td= shift.end_time
-        %td= shift.metashift
-        %td= link_to 'Show', shift
-        %td= link_to 'Edit', edit_shift_path(shift)
-        %td= link_to 'Destroy', shift, :method => :delete, :data => { :confirm => 'Are you sure?' }
-
-%br
+/= @shifts.inspect
+/= @serializedShifts.inspect
 
 = link_to 'New Shift', new_shift_path
