almost complete rspec for policies - qa passes but 1 test fails

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,9 +53,13 @@
       </div><!--/.nav-collapse -->
     </div>
   </div>
+  
+
 
 <div class="container mtb">
-
+<% flash.each do |key, value| %>
+  <%= content_tag :div, value, class: "flash #{key}" %>
+<% end %>
 
 <%= yield %>
 </div><!-- /headerwrap -->  
