--- a/app/views/policies/show.html.erb
+++ b/app/views/policies/show.html.erb
@@ -1,7 +1,3 @@
-<% flash.each do |key, value| %>
-  <%= content_tag :div, value, class: "flash #{key}" %>
-<% end %>
-
 <div class="spacing"></div>
  <h4>Your Policies</h4>
  <div class="hline"></div>
@@ -13,4 +9,7 @@
 
 
 
-<%= link_to 'Edit', edit_policy_path %>
+<%### ADMIN ONLY ###%>
+<% if @current_user.is_ws_manager %>
+    <%= link_to 'Edit', edit_policy_path %>
+<% end %>
