Created multiple webpack configs for prod/dev, made it NOT use chunkmanifests. Only js entrypoint is bundle.js

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,9 @@
 <head>
   <title>Coop Workshift</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "bundle", "data-turbolinks-track" => true %>-->
+  
+ <%= webpack_manifest_script %>
+  <%= javascript_include_tag 'bundle' %>
   <%= csrf_meta_tags %>
 </head>
 <!--<body style="background-color:#BBBBBB">-->
