--- a/app/views/shifts/index.html.erb
+++ b/app/views/shifts/index.html.erb
@@ -7,4 +7,7 @@
 
 = link_to 'New Shift', new_shift_path-->
 
+<%= content_tag :div, class: "temp_information", data: {temp: @serializedShifts} do %>
+<% end %>
+
 <div id='work-shift-table'></div>
