--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,26 +30,10 @@
           <li><a href="/shifts"> Shifts </a></li>
             <% if current_user %>
               <li> <%= link_to 'Policies', policy_path %> </li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.full_name %> <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                  <li><%= link_to "Profile", user_profile_path(current_user.id) %></li>
-                  <li><%= link_to "Sign Out", '/logout' %></li>
-                </ul>
-              </li>
+              <li><%= link_to "Profile", user_profile_path(current_user.id) %></li>
+              <li><%= link_to "Sign Out", '/logout' %></li>
             <% else %>
-              <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
-          			<div id="login-dp" class="dropdown-menu">
-          				<!--<li>-->
-          				<!--	 <div class="row">-->
-          				<!--			<div class="col-md-12">-->
-          								 <%= render "sessions/login_form" %>
-          				<!--			</div>-->
-          				<!--	 </div>-->
-          				<!--</li>-->
-          			</div>
-              </li>
+            <li><%= render "sessions/login_form" %></li>
             <% end %>
           </li>
         </ul>
