--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,18 @@
               <li><%= link_to "Profile", user_profile_path(current_user.id) %></li>
               <li><%= link_to "Sign Out", '/logout' %></li>
             <% else %>
-            <li><%= render "sessions/login_form" %></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
+              <div id="login-dp" class="dropdown-menu">
+                <!--<li>-->
+                <!--	 <div class="row">-->
+                <!--			<div class="col-md-12">-->
+                  <%= render "sessions/login_form" %>
+                <!--			</div>-->
+                <!--	 </div>-->
+                <!--</li>-->
+              </div>
+            </li>
             <% end %>
           </li>
         </ul>
