fixed workshift formatting

--- a/app/views/shifts/upload.html.erb
+++ b/app/views/shifts/upload.html.erb
@@ -16,11 +16,12 @@
       <%=render "shifts/add_csv_form" %>
 
     </div>
+  </div>
   
   <! --/row -->
   
   <! --New row -->
-  <div class="row" style= "padding-top:15px;">
+  <div class="row" style= "padding-top:15px">
 
   <div class="hline"></div>
 
