--- a/app/views/shifts/add_timeshifts.html.erb
+++ b/app/views/shifts/add_timeshifts.html.erb
@@ -2,5 +2,7 @@
 
 <h3 style="margin-bottom:15px;"> Description: <small> <%= @metashift.description%></small> </h4>
 
-<h3 style="margin-bottom:15px;"> Hour Value: <small><%= @metashift.multiplier%></small></h4>
+<h3 style="margin-bottom:40px;"> Hour Value: <small><%= @metashift.multiplier%></small></h4>
 
+<h1 style="margin-bottom:15px;"> Add times </h4>
+<%=render "add_timeslots_form" %>
