--- a/app/views/shifts/_add_timeslots_form.html.erb
+++ b/app/views/shifts/_add_timeslots_form.html.erb
@@ -1,5 +1,5 @@
 <br>
-  <%=form_tag add_metashift_path, :id => 'my_form' do %>
+  <%=form_tag add_timeslots_path, :id => 'my_form' do %>
 <form class="form-horizontal">
     <div class="row">
          <div class="form-group" style="margin-top:20px">
@@ -17,7 +17,8 @@
          </div>
     </div>
 </form>
-  <button type="submit" class="btn btn-theme" id="submit_button">Add Workshift</button>
+ 
+<button type="submit" class="btn btn-theme" id="submit_button">Add Workshift</button>
   
   <% end %>
   
