--- a/app/views/shifts/index.html.erb
+++ b/app/views/shifts/index.html.erb
@@ -1,11 +1,11 @@
 <h1>Listing Shifts</h1>
 
-<!--= react_component 'WorkShiftTable', {:shifts => @serializedShifts}, :div
+<%= react_component 'WorkShiftTable', {:shifts => @serializedShifts}, :div %>
 
-/= @shifts.inspect
-/= @serializedShifts.inspect
+<!--= @shifts.inspect-->
+<!--= @serializedShifts.inspect-->
 
-= link_to 'New Shift', new_shift_path-->
+<%= link_to 'New Shift', new_shift_path %>
 
 <%= content_tag :div, class: "temp_information", data: {temp: @serializedShifts} do %>
 
