--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,7 +13,7 @@
 <br> <%= link_to 'Edit Profile', edit_profile_path %> </br>
 
 <%### ADMIN ONLY ###%>
-<% if @current_user.is_ws_manager %>
+<% if @current_user.is_ws_manager? %>
     <br> <%= link_to 'Create Users', '/signup' %> </br>
     <br> <%= link_to 'Create Workshifts', create_shifts_path %> </br>
     <br> <%= link_to 'Assign Workshifts', '/'%> </br>
