--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
               <li> <%= link_to 'Policies', policy_path %> </li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.full_name %> <b class="caret"></b></a>
-                <ul class="dropdown-menu">
+                <ul class="dropdown-menu dropdown-menu-theme">
                   <li><%= link_to "Profile", user_profile_path(current_user.id) %></li>
                   <li><%= link_to "Sign Out", '/logout' %></li>
                 </ul>
