Fixed all tests

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -31,10 +31,10 @@
                         <td><b>Hour Balance</b></td>   <td><%= current_user.hour_balance %> </td>
                       </tr>
                       <tr>
-                        <td><b>Fine Balance:</b></td>    <td><%= current_user.hour_balance %></td>
+                        <td><b>Fine Balance:</b></td>    <td><%= current_user.fine_balance %></td>
                       </tr>
                       <tr>
-                        <td><b>Permanant Shift Assignment:</b> </td>     <td></td>
+                        <td><b>Permanent Shift Assignment:</b> </td>     <td></td>
                       </tr>
                       <tr>
                         <td><b>Shift Signoff History: </b></td>     <td></td>
