--- a/app/assets/stylesheets/policies.scss
+++ b/app/assets/stylesheets/policies.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the policies controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.information p {
+    font-size: 120%;
+}
