--- a/app/views/policies/show.html.erb
+++ b/app/views/policies/show.html.erb
@@ -1,13 +1,14 @@
 <div class="spacing"></div>
- <h4>Your Policies</h4>
+ <h3>Policies for <%= @current_user.unit.name %> </h4>
  <div class="hline"></div>
+<div class = "information">
  <p><b>Semester Start Date:</b> <%= @policy.first_day.strftime("%B %d, %Y") %> </p>
  <p><b>Semester End Date:</b> <%= @policy.last_day.strftime("%B %d, %Y") %> </p>
  <p><b>Fining Days:</b> <%= @policy.get_fine_days %> </p>
  <p><b>Fining Rate:</b> <%= @policy.fine_amount %> </p>
  <p><b>Selling Date Limit:</b> <%= @policy.market_sell_by %> </p>
-
-<%= puts @policy.inspect %>
+</div>
+<!--<%= puts @policy.inspect %>-->
 
 <%### ADMIN ONLY ###%>
 <% if @current_user.is_ws_manager? %>
